[project]
name = "sycamore-ai"
version = "0.1.30"
description = "Sycamore is an LLM-powered semantic data preparation system for building search applications."
authors = [{ name = "aryn.ai", email = "opensource@aryn.ai" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
dependencies = [
    "pandas>=2.1.1,<3",
    "pdf2image>=1.16.3,<2",
    "ray[default]>=2.36.0,<3",
    "pyarrow>=14.0.2,<15",
    "numpy<2.0.0",
    "openai>=1.60.2,<2",
    "beautifulsoup4>=4.13.1,<5",
    "amazon-textract-textractor>=1.3.2,<2",
    "boto3>=1.28.70,<2",
    "boto3-stubs[essential]>=1.35.12,<2",
    "urllib3>=1.26.0,<3",
    "async-timeout>4.0.0",
    "pillow>=11.1.0,<12",
    "tenacity>=8.4.1,<9",
    "diskcache>=5.6.3,<6",
    "overrides>=7.7.0,<8",
    "structlog>=24.2.0,<25",
    "setuptools>70.0.0",
    "dateparser>=1.2.0,<2",
    "jinja2>=3.1.5,<4",
    "fsspec==2024.2.0",
    "aiohttp>=3.10.11,<4",
    "fasteners>=0.19,<0.20",
    "pydantic>=2.8.2,<3",
    "typing-extensions>=4.12.2,<5",
    "pypdf>=5.1.0,<6",
    "nanoid>=2.0.0,<3",
    "tiktoken>=0.8.0,<0.9",
]

[project.optional-dependencies]
docs = [
    "furo>=2023.9.10,<2024",
    "myst-parser>=2.0.0,<3",
    "sphinx>=7.2.5,<8",
]
eval = [
    "apted>=1.0.3,<2",
    "datasets>=2.16.1,<3",
    "rouge>=1.0.1,<2",
]
duckdb = ["duckdb>=1.1.1,<2"]
elasticsearch = ["elasticsearch==8.14.0"]
neo4j = ["neo4j>=5.21.0,<6"]
opensearch = ["opensearch-py>=2.3.1,<3"]
pinecone = [
    "pinecone-client[grpc]>=4.1.0,<5",
    "pinecone-text>=0.9.0,<0.10",
]
weaviate = ["weaviate-client>=4.6.1,<4.7"]
qdrant = ["qdrant-client>=1.11.2,<2"]
local-inference = [
    "easyocr>=1.7.1,<2",
    "paddleocr>=2.8.1,<3",
    "pdfminer-six==20221105",
    "pytesseract>=0.3.10,<0.4",
    "sentence-transformers>=3.0.1,<4",
    "timm>=0.9.12,<0.10",
    "torch>=2.3.0,<3",
    "torchvision>=0.18.1,<0.19",
    "transformers>=4.43.1,<5",
]
legacy-partitioners = [
    "unstructured==0.10.20",
    "python-pptx>=0.6.22,<0.7",
    "nltk>=3.9.0,<4",
]
anthropic = ["anthropic>=0.42.0,<0.43"]

[project.urls]
Repository = "https://github.com/aryn-ai/sycamore.git"
Documentation = "https://sycamore.readthedocs.io"

[dependency-groups]
test = [
    "flake8==4.0.1",
    "pytest==7.4.0",
    "pytest-mock~=3.11",
    "pytest-xdist>=3.6.1,<4",
]
dev = [
    "sycamore-poetry-lock",
    "ruff>=0.0.287,<0.0.288",
    "black~=24.4",
    "pre-commit>=3.4.0,<4",
    "mypy>=1.5.1,<2",
    "nbmake>=1.4.5,<2",
]
notebook = [
    "jupyterlab>=4.0.11,<5",
    "jupyter-lsp>=2.2.2,<3",
    "ipywidgets>=8.1.0,<9",
    "matplotlib>=3.9.0,<4",
    "rich>=13.7.1,<14",
]
docker = [
    "requests>=2,<3",
    "redis-om>=0.3,<0.4",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
    "notebook",
    "docker",
]

[tool.uv.sources]
sycamore-poetry-lock = { path = "../../lib/poetry-lock", editable = true }

[tool.hatch.build.targets.sdist]
include = ["sycamore"]

[tool.hatch.build.targets.wheel]
include = ["sycamore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
exclude = ["notebooks", "docs"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
