[tool.poetry]
name = "sycamore-ai"
version = "0.1.33"
description = "Sycamore is an LLM-powered semantic data preparation system for building search applications."
authors = ["aryn.ai <opensource@aryn.ai>"]
readme = "README.md"
repository = "https://github.com/aryn-ai/sycamore.git"
packages = [{ include = "sycamore" }]


[tool.poetry.urls]
"Repository" = "https://github.com/aryn-ai/sycamore.git"
"Documentation" = "https://sycamore.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

pandas = "^2.3.0"
pdf2image = "^1.16.3"
ray = { extras = ["default"], version = "^2.46.0" }

pyarrow = "^20.0.0"
numpy = "<2.0.0"
openai = "^1.60.2"
beautifulsoup4 = "^4.13.1"
amazon-textract-textractor = "^1.3.2"
boto3 = "^1.28.70"
boto3-stubs = {extras = ["essential"], version = "^1.35.12"}
urllib3 = ">=2.5.0,<3"
async-timeout = ">4.0.0"
pillow = "^11.3.0" # See poetry-lock/pyproject.toml
tenacity = "^8.4.1"
diskcache = "^5.6.3"
overrides = "^7.7.0"
structlog = "^24.2.0"
setuptools = ">=78.1.1"
dateparser = "^1.2.0"
rich = "^13.7.1"

jinja2 = "^3.1.6"
fsspec = "2024.2.0" # See poetry-lock/pyproject.toml

aiohttp = "^3.12.14"
fasteners = "^0.19"
pydantic = "^2.8.2"

typing-extensions = "^4.12.2"

httpcore = ">=1.0.9"
tornado = ">=6.5.0"  # See poetry-lock/pyproject.toml

aryn-sdk = ">=0.2.6"

protobuf = "^5.29.5"

#Evaluation dependencies
apted = { version = "^1.0.3", optional = true }
datasets = { version = "^2.16.1", optional = true }
rouge = { version = "^1.0.1", optional = true }

# Dependencies for building docs. Defined as an extra
# so they can be installed using pip on RTD.
furo = { version = "^2023.9.10", optional = true }
myst-parser = { version = "^2.0.0", optional = true }
sphinx = { version = "^7.2.5", optional = true }

pypdf = "^5.1.0"

# Connector dependencies
elasticsearch = { version = "8.14.0", optional = true}
duckdb = { version = "^1.1.1", optional = true }
neo4j = { version = "^5.21.0", optional = true }
opensearch-py = { version = "^2.3.1", optional = true }
pinecone = { version = "^6.0.2", extras = ["grpc"], optional = true }
pinecone-text = { version = "^0.9.0", optional = true }
weaviate-client = { version = ">=4.14.1", optional = true } # typechecking fails with 4.7
qdrant-client = { version = "^1.11.2", optional = true }

# Local inference dependencies
easyocr = { version = "^1.7.1", optional = true }
paddleocr = { version = "^3.1.0", optional = true }
pdfminer-six = { version = "20221105", optional = true }
pytesseract = { version = "^0.3.10", optional = true }
sentence-transformers = { version = "^3.0.1", optional = true }
timm = { version = "^0.9.12", optional = true }
torch = { version = "^2.7.1", optional = true }
torchvision = { version = "^0.22.0", optional = true }
transformers = { version = "^4.53.1", optional = true }

# Legacy partitioner dependencies
unstructured = { version = "^0.16.2", extras=["pdf"], optional = true }
python-pptx = {version = "^0.6.22", optional = true }
nanoid = "^2.0.0"
nltk = { version = "^3.9.0", optional = true }

# LLM Dependencies
anthropic = { version = "^0.42.0", optional = true }
google-genai = {version = "^1.14.0", optional = true}
tiktoken = "^0.8.0"
msgpack = "^1.1.1"

[tool.poetry.group.test.dependencies]
flake8 = "4.0.1"
pytest = "7.4.0" # See poetry-lock/pyproject.toml
pytest-mock = "^3.11"
pytest-xdist = "^3.6.1"

[tool.poetry.group.dev.dependencies]
sycamore-poetry-lock = { path = "../../lib/poetry-lock", develop = true }
import_timer = { path = "../import_timer", develop = true }
ruff = ">=0.11.2"
black = ">=25.1"
pre-commit = ">=4.2.0"
mypy = ">=1.15.0"
nbmake = "^1.4.5"

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.0.11"
jupyter-lsp = "^2.2.2"
jupyter-core = "^5.8.1"
ipywidgets = "^8.1.0"
matplotlib = "^3.10.0"

[tool.poetry.group.docker.dependencies]
requests = "^2.32.4"
redis-om = "^0.3"

[tool.poetry.extras]
docs = ["furo", "myst-parser", "sphinx"]
eval = ["apted", "datasets", "rouge"]

# Connector extras
duckdb = ["duckdb"]
elasticsearch = ["elasticsearch"]
neo4j = ["neo4j"]
opensearch = ["opensearch-py"]
pinecone = ["pinecone", "pinecone-text"]
weaviate = ["weaviate-client"]
qdrant = ["qdrant-client"]

# Partitioner extras
local-inference = [
  "easyocr",
  "paddleocr",
  "pdfminer-six",
  "pytesseract",
  "sentence-transformers",
  "timm",
  "torch",
  "torchvision",
  "transformers"
 ]
legacy-partitioners = ["unstructured", "python-pptx", "nltk"]

# LLM extras
anthropic = ["anthropic"]
google-genai = ["google-genai"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
exclude = ["notebooks", "docs"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
