[tool.poetry]
name = "py-proxy"
version = "0.1.0"
description = "Python proxy for openai and some pdf fetching"
authors = ["HenryL27 <hmlindeman@yahoo.com>"]
readme = "README.md"
packages = [{include = "py_proxy"}]

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "^3.0.0"
gevent = "^23.9.1"
Flask-Cors = "^4.0.0"
Werkzeug = "^3.0.0"
requests = "^2.31"
boto3 = "^1.28.70"
openai = "0.28.1"
anthropic = "^0.25.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
